tests/lean/argNameAtPlaceholderError.lean.expected.out
argNameAtPlaceholderError.lean:8:11-8:12: error: Placeholder could not be inferred.

Argument `stx` is not determined by the other arguments in the application or by the expected type.

context:
stx : Syntax
⊢ Syntax
argNameAtPlaceholderError.lean:8:13-8:14: error: Placeholder could not be inferred.

Argument `expectedType?` is not determined by the other arguments in the application or by the expected type.

context:
stx : Syntax
⊢ Option Expr
argNameAtPlaceholderError.lean:8:15-8:16: error: Placeholder could not be inferred.

Argument `catchExPostpone` is not determined by the other arguments in the application or by the expected type.

context:
stx : Syntax
⊢ Bool
